# beobot

./: Brix_USB.docx  CMakeLists.txt  README.md  package.xml  test_controller.py
Beo_Arm/: Readme
Beo_Arm/Beo_Arm/: CMakeLists.txt  package.xml
Beo_Arm/Beo_Arm/launch/: display.launch  gazebo.launch
Beo_Arm/Beo_Arm/meshes/: hand.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
Beo_Arm/Beo_Arm/urdf/: Beo_Arm.csv  Beo_Arm.urdf
Beo_Arm/Beo_Arm_M4/: CMakeLists.txt  package.xml
Beo_Arm/Beo_Arm_M4/launch/: display.launch  gazebo.launch
Beo_Arm/Beo_Arm_M4/meshes/: hand.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
Beo_Arm/Beo_Arm_M4/urdf/: Beo_Arm_M4.csv  Beo_Arm_M4.urdf
Beo_Arm/Beo_Arm_M4_config/: CMakeLists.txt  package.xml
Beo_Arm/Beo_Arm_M4_config/config/: Beo_Arm_M4.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  (+1 more)
Beo_Arm/Beo_arm_config/: CMakeLists.txt  package.xml
Beobot URDF/BeobotV3_arm/: CMakeLists.txt  package.xml
Beobot URDF/Beobot_URDF/: CMakeLists.txt  package.xml
Mega/: beobot3_controller.cpp  beobot3_controller.h  beobot3_diagnosis.cpp  beobot3_motor_driver.cpp  beobot3_sensor.cpp  main.ino  robot.txt
Mega/main/: Constants.h  DifferentialDrive.cpp  DifferentialDrive.h  Encoder.cpp  Encoder.h  Motor.cpp  Motor.h  PositionControl.cpp  SpeedControl.cpp  SpeedControl.h  main.ino
Rpi/: differential_drive.c  kinetic-ros_comm-wet.rosinstall
Rpi/beobot_control/: CMakeLists.txt  beobot_motor  beobot_motor.py  package.xml
Rpi/beobot_diff/: CMakeLists.txt  diff_tf  package.xml  twist_to_motors
Rpi/beobot_diff/msg/: Motor.msg
Rpi/beobot_diff/scripts/: diff_tf.py  twist_to_motors.py
Rpi/beobot_main/: CMakeLists.txt
Rpi/build_isolated/: catkin_make_isolated.cache
Rpi/devel_isolated/: setup.bash  setup.sh  setup.zsh
Rpi/main/: Constants.h  Encoder.cpp  main.ino
Uno/: Driver.pde  RCrecieve.h  main.pde
Uno/main/: Constants.h  Wifi.h  main.ino
brix/: README.md
brix/beobot_control/: CMakeLists.txt  beobot_motor.py
brix/mobile_robot_setup_tf/: tf_broadcaster.cpp
config/: joint_names_BeobotV3_arm.yaml  ros_controllers.yaml
data_collect/: commands.txt  run_server.sh
data_collect/scripts/: cleanall.sh  clear_servers.sh  kill_servers.sh  killall.sh  rerun.sh  restart_servers.sh  start_servers.sh  test.sh
data_collect/servers/: extra.sh  iGpu10.sh  iGpu11.usc.edu.sh  iGpu15.sh  iGpu20.usc.edu.sh  iGpu21.sh  iGpu3.sh  iGpu4.sh  iGpu5.sh  igpu9.sh
firmware/Mega/: EncoderMsg.h
launch/: display.launch  gazebo.launch  gazebo_full.launch
meshes/: Velodine.STL  arm_link_1.STL  base_link.STL  hand.STL  left_wheel.STL  realsense-3.STL  realsense-5.STL  realsense_1.STL  realsense_2.STL
old/main/: RCrecieve.h  main.ino
raspi/beobot_arm/: beobot_motor.py  diff_tf  twist_to_motors
raspi/beobot_control/: CMakeLists.txt  package.xml
raspi/beobot_control/cfg/: beobotControl.cfg
raspi/beobot_control/include/beobot_control/: Constants.h  DifferentialDrive.h  Motor.h  listener.h
raspi/beobot_control/rosinstall/: node_example.rosinstall
raspi/beobot_control/src/: BaseMain.cpp  DEV_Config.c  DifferentialDrive.cpp  Motor.cpp
raspi/beobot_control/src/nodes/: base_node.cpp
urdf/: BeobotV3_arm.csv  BeobotV3_arm.urdf
(+1599 files in other folders)
